--- a/index.html
+++ b/index.html
@@ -1,10 +1,36 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>BCCA-DEMO</title>
+    <link rel="stylesheet" href="css/basicStyle.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-
+<!-- 头部盒子 -->
+<div class="header">
+    <div class="leftBox">
+        <div class="imgBox">
+            <img src="img/logo.png" alt="">
+        </div>
+        <div class="inputBox">
+            <input type="text">
+            <img src="img/search.png" alt="">
+        </div>
+    </div>
+    <div class="rightBox">
+        <span class="userBox">
+            <img src="img/userIcon.png" alt="">
+            <span>Aico LEE</span>
+        </span>
+        <span class="outBox">
+            <img src="img/outIcon.png" alt="">
+            <span>退出</span>
+        </span>
+    </div>
+</div>
 </body>
 </html>
