--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
     <!-- 详情盒子 -->
     <div class="detailBox"></div>
 </div>
+<!-- <div>
+    <iframe src="http://118.31.76.126:20001/device/UIEditor?productCode=00028a01" frameborder="0"></iframe>
+</div> -->
 <script src="js/jquery.min.js"></script>
 <script>
     $(function () {
