--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     let vm = new Vue({
         el: "#app",
         data: {
-            popoutValue: "setUI", //显示哪个弹框
+            popoutValue: "", //显示哪个弹框
             choose_device: { // 接入测试具体设备的参数
                 id: 1,
                 isSuccess: true
