--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>BCCA-DEMO</title>
     <link rel="stylesheet" href="css/basicStyle.css">
     <link rel="stylesheet" href="css/index.css">
+    <script src="js/vue-2.4.0.js"></script>
+    <script src="js/httpVueLoader.js"></script>
+    <script src="js/echars_4.4.0.min.js"></script>
 </head>
 <body>
 <!-- 头部盒子 -->
@@ -474,7 +477,7 @@
             // 关闭弹框
             close() {
 
-                this.popoutValue = ""
+                this.popoutValue = "test"
             },
             //打开弹框
             showPopout(data) {
