--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
                         isSuccess: true,    //是否成功
                     },
                 ],
-                popoutValue: "test", //显示哪个弹框
+                popoutValue: "setUI", //显示哪个弹框
                 choose_device: { // 接入测试具体设备的参数
                     id: 1,
                     isSuccess: true
@@ -477,7 +477,7 @@
             // 关闭弹框
             close() {
 
-                this.popoutValue = "test"
+                this.popoutValue = ""
             },
             //打开弹框
             showPopout(data) {
